src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>ISR_ID__c</fullName>
        <formula>BLANKVALUE(ISR__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISR ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISR_Not_Required_On_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if there will not be an ISR on the opportunity</description>
        <inlineHelpText>Check this box if there will not be an ISR on the opportunity</inlineHelpText>
        <label>ISR Not Required On Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISR_Required__c</fullName>
        <formula>IF(TEXT(Owner.Region__c)=&quot;APAC&quot;,FALSE,
IF(TEXT(Owner.Region__c)=&quot;Japan&quot;,FALSE,
IF(TEXT(Owner.Geo__c)=&quot;ROW&quot;,FALSE,
IF(TEXT(Owner.Region__c)=&quot;LATAM&quot;,FALSE,
IF(Owner.ISR_Not_Required__c=TRUE,FALSE,TRUE
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISR Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISR</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>AppD ISR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ISR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Identified_Pain_Notes_MEDDICC__c</fullName>
        <label>Identified Pain Notes (MEDDICC)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Adoption_Score__c</fullName>
        <label>Internal Adoption Score</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kickoff_Date__c</fullName>
        <label>Kickoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Comments__c</fullName>
        <label>Lead Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Origin__c</fullName>
        <label>Lead Source Origin</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>30-Day Trial Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-Day Trial - Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD Direct Download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD Google Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Things Open, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AnsibleFest 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApacheCon 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApacheCon 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam NYC 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Paris 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show Chicago 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show Dallas 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show DC 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show Frankfurt 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show London 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show Newport Beach 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppJam Road Show SF 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apps World London 13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWS 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWS re:Invent 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWS Summit London Sept 13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWS Summit NYC 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basta! .NET 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASTA! Fall 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASTA! Spring 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASTA Fall Mainz 13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASTA Spring 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bay .Net UG 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BbWorld 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBWorld 2012</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Documents__c</fullName>
        <label>Legal Documents</label>
        <summaryForeignKey>Legal_Documents__c.Legal_Documents__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Status__c</fullName>
        <description>Legal review status of any special terms for this opportunity</description>
        <inlineHelpText>If legal review is required, please update this status to &quot;Submitted for Legal Review.&quot;</inlineHelpText>
        <label>Legal Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Legal Review Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Legal Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Review Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Count__c</fullName>
        <description>License count within the Opportunity only.</description>
        <label>License Count</label>
        <summaryForeignKey>License_Opportunity__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>License_Term_in_Months__c</fullName>
        <description>Please enter the license term in whole months.</description>
        <inlineHelpText>Please enter the license term in whole months.</inlineHelpText>
        <label>License Term in Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Licenses_Checkbox__c</fullName>
        <description>To check in the number of Licenses is greater than 0.</description>
        <formula>IF(License_Count__c&gt;0,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licenses Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Licenses_Checkbox_del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the number of licenses within the Opportunity is greater than 0.</description>
        <label>Licenses Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Ended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bought Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Ops Cleansing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_Override_on_Amount__c</fullName>
        <inlineHelpText>Please enter an amount.</inlineHelpText>
        <label>Upside Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manager_s_Additional_Comments__c</fullName>
        <inlineHelpText>Please enter comments including specific thank yous, call outs and specific opportunity details of importance.</inlineHelpText>
        <label>Special Thanks &amp; Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manager_s_Approve_to_Send_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the opportunity is at W10, the booked date is filled in and the Opportunity Amount (converted) is &gt;$100K, checking this field will trigger a win email to go out to the whole company.</description>
        <inlineHelpText>Check this box when you&apos;re ready for this win notification to go out to the company.</inlineHelpText>
        <label>Manager&apos;s Approval to Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_s_Competition_Notes__c</fullName>
        <description>Manager&apos;s notes for competitive positioning on the Opportunity</description>
        <inlineHelpText>Please enter competitive notes for why we won.</inlineHelpText>
        <label>Competition Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manager_s_Customer_Use_Case__c</fullName>
        <description>Manager to enter the customer&apos;s use case in the opportunity.</description>
        <inlineHelpText>Please enter the Customer&apos;s Use Case</inlineHelpText>
        <label>Customer&apos;s Use Case</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Metrics_Notes_MEDDICC__c</fullName>
        <label>Metrics Notes (MEDDICC)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NS_Sync__c</fullName>
        <label>NetSuite Sync</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NS_run_item_group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>how many item groups are present in the opportunity</description>
        <label>NS run item group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_Partner_and_Address_for_CD__c</fullName>
        <label>Name of Partner &amp; Addr for CD Delivery</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NetSuite_Id__c</fullName>
        <externalId>true</externalId>
        <label>NetSuite Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Mapping__c</fullName>
        <label>NetSuite Mapping</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NetSuite Quote</label>
        <referenceTo>NetSuite_Estimate__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NetSuite_Sync_Time__c</fullName>
        <label>NetSuite Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NetSuite_Warning__c</fullName>
        <label>NetSuite Warning</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Net_Amount_after_Finance_Charges__c</fullName>
        <formula>Amount -  Financing_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount after Finance Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Netsuite_Customer__c</fullName>
        <label>Netsuite Customer</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business__c</fullName>
        <label>New Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates first time customer</description>
        <inlineHelpText>Check if this is first transaction with customer</inlineHelpText>
        <label>New Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <inlineHelpText>Enter next steps for this Eval.</inlineHelpText>
        <label>SE Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Public_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If prior permission required for public marketing check this box.</inlineHelpText>
        <label>No Public Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Of_Quotes__c</fullName>
        <description>The number of Quotes that this Opportunity has.</description>
        <label>Number Of Quotes</label>
        <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Months_Financed__c</fullName>
        <label>Number of Months Financed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Payments__c</fullName>
        <label>Number of Payments</label>
        <summaryForeignKey>Payment_Terms__c.Opportunity_terms__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Product_Line_Items__c</fullName>
        <label>Number of Product Line Items</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Vouchers__c</fullName>
        <label>Number of Vouchers</label>
        <summaryForeignKey>AppDynamics_University_Voucher__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OM_Payment_Schedule__c</fullName>
        <formula>IF (ISPICKVAL( SyncedQuote.Payment_Schedule__c , &quot;Standard&quot;),&quot;Standard&quot;, 
IF (ISPICKVAL( SyncedQuote.Payment_Schedule__c , &quot;Annual Equal Payments&quot;),&quot;Annual Equal Payments&quot;,
IF (ISPICKVAL( SyncedQuote.Payment_Schedule__c , &quot;Annual Custom Payments&quot;),&quot;Annual Custom Payments&quot;, 
IF (ISPICKVAL( SyncedQuote.Payment_Schedule__c , &quot;Custom&quot;),&quot;Custom&quot;, &quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OM - Payment Schedule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Time_Discount_Amount__c</fullName>
        <description>SyncedQuote.One_Time_Discount__c</description>
        <formula>IF(

SyncedQuote.Id = &quot;&quot;, 0,

SyncedQuote.One_Time_Discount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Time Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_Time_Discount_Calc_Total_Price__c</fullName>
        <description>SyncedQuote.One_Time_Discount_Calc_Total_Price__c</description>
        <formula>IF(

SyncedQuote.Id = &quot;&quot;, 0,

SyncedQuote.One_Time_Discount_Calc_Total_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Time Discount Calc Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>One_Time_Discount_Percent__c</fullName>
        <formula>SyncedQuote.One_Time_Discount_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Time Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Onsite_Training_Units__c</fullName>
        <label>Onsite Training Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Description__c</fullName>
        <label>Opportunity Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Payment_Terms__c</fullName>
        <formula>TEXT( SyncedQuote.Payment_Terms__c )</formula>
        <label>Opportunity Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Line_Items__c</fullName>
        <description>This field is used to count the number of product line items on an Opportunity. It is also used in a validation rule to ensure that there is at least 1 opportunity product line item on an Opportunity before moving to Stage W10 Closed.</description>
        <label>Opportunity Product Line Items</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <description>To identify whether it is a Direct Deal or 3rd Party involved order.</description>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR – Resale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR – Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Ops_Comments__c</fullName>
        <label>Order Ops Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Referrer_Oppty__c</fullName>
        <label>Original Referrer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Customer_Satisfaction__c</fullName>
        <label>Overall Customer Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Attention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owned_by_User__c</fullName>
        <description>Used to understand if the active sales rep has ownership of the opportunity</description>
        <formula>IF( OwnerId = $User.Id , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owned by User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Formula__c</fullName>
        <formula>IF(
OwnerId =  Account.OwnerId,
&quot;True&quot;,
&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <formula>IF(ISPICKVAL( Owner.Region__c, &quot;West&quot;),&quot;West&quot;, 
IF (ISPICKVAL( Owner.Region__c, &quot;East&quot;),&quot;East&quot;, 
IF (ISPICKVAL( Owner.Region__c, &quot;South&quot;),&quot;South&quot;, 
IF (ISPICKVAL( Owner.Region__c, &quot;Central&quot;),&quot;Central&quot;, 
IF (ISPICKVAL( Owner.Region__c, &quot;CER&quot;),&quot;CER&quot;, 
IF (ISPICKVAL( Owner.Region__c, &quot;SER&quot;),&quot;SER&quot;, 
IF (ISPICKVAL( Owner.Region__c, &quot;NER&quot;),&quot;NER&quot;, 
IF (ISPICKVAL( Owner.Region__c, &quot;APAC&quot;),&quot;APAC&quot;, 
IF (ISPICKVAL( Owner.Region__c, &quot;Channel&quot;),&quot;Channel&quot;, 
IF (ISPICKVAL( Owner.Region__c, &quot;LATAM&quot;),&quot;LATAM&quot;, 
IF (ISPICKVAL( Owner.Region__c, &quot;ANZ&quot;),&quot;ANZ&quot;, 
IF (ISPICKVAL( Owner.Region__c, &quot;Renewals&quot;),&quot;Renewals&quot;, 
IF (ISPICKVAL( Owner.Region__c, &quot;MSP&quot;),&quot;MSP&quot;, 
IF (ISPICKVAL( Owner.Region__c, &quot;India&quot;),&quot;India&quot;, 
IF (ISPICKVAL( Owner.Region__c, &quot;Japan&quot;),&quot;Japan&quot;, 
IF (ISPICKVAL( Owner.Region__c, &quot;Alliances&quot;),&quot;Alliances&quot;, 
&quot;&quot;))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_s_Manager__c</fullName>
        <formula>$User.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Dormant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>POC Dormant or Inactive</description>
        <inlineHelpText>Check this box if the POC has gone dormant or is inactive</inlineHelpText>
        <label>POC Dormant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POC_Risk_Description__c</fullName>
        <description>Please enter a brief description of the current risk issues.</description>
        <inlineHelpText>POC Risk Radar is a way to escalate a POC that is experiencing issues -- None, Low, Medium, and High depending on criticality.</inlineHelpText>
        <label>POC Risk Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>POC_Risk__c</fullName>
        <description>What is our perceived risk with the current POC (active or dormant evaluation of PRO version).</description>
        <inlineHelpText>POC Risk Radar is a way to escalate a POC that is experiencing issues -- None, Low, Medium, and High depending on criticality.</inlineHelpText>
        <label>POC Risk</label>
        <picklist>
            <picklistValues>
                <fullName>1 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3- Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4- None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PO_Upload_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked by the internal Sales  Rep indicating that he/she has approved the uploaded customer PO. Only required for opportunities over $100K.</inlineHelpText>
        <label>PO Upload Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Upload_Date__c</fullName>
        <label>PO Upload Date</label>
        <summarizedField>Opportunity_Upload__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Upload__c.Document_Type__c</field>
            <operation>equals</operation>
            <value>Purchase Order</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Upload__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Referenced in Deal Reg Approval Process</description>
        <label>Partner Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Involved__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Partner involved in this deal/opportunity</description>
        <label>Partner On Opportunity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Sales rep managing the relationship with the partner on the opportunity</inlineHelpText>
        <label>Partner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Margin_Discount_Calc_Total_Price__c</fullName>
        <label>Partner Margin Discount Calc Total Price</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Family__c</field>
            <operation>notEqual</operation>
            <value>Discount, Hosting, User Conference, Other</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partner_Margin_Discount__c</fullName>
        <formula>SyncedQuote.Partner_Margin_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Margin Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Margin__c</fullName>
        <description>The Partner Margin Discount for the Partner Account to which this Partner Opportunity is associated.</description>
        <formula>SyncedQuote.Contact.Account.Margin_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Partner_Technical_Owner__c</fullName>
        <label>Partner Technical Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <description>***NOT IN USE***</description>
        <label>Partner</label>
        <picklist>
            <picklistValues>
                <fullName>adhoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon EC2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon WS (AWS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apica Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CloudBees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloudops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>codecentric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datavail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominion Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grid Robotics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Source Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J9Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keynote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kuali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MXI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newton Technology Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Novatec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTT Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prelert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reekya Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RightScale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scicom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_on_Opportunity_2__c</fullName>
        <formula>SyncedQuote.Partner_on_Quote__c</formula>
        <label>Partner on Opportunity 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <summarizedField>Payment_Terms__c.Payment_Amount_Number__c</summarizedField>
        <summaryForeignKey>Payment_Terms__c.Opportunity_terms__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Percentage_2__c</fullName>
        <formula>IF ( OM_Payment_Schedule__c = &quot;Annual Custom Payments&quot;,((Year_1__c*1)+(Year_2__c*0.6)+(Year_3__c*0.4))/Amount,
IF ( OM_Payment_Schedule__c = &quot;Standard&quot;, 1.0,
IF ( OM_Payment_Schedule__c = &quot;Annual Equal Payments&quot;, 0.6667, 
IF ( OM_Payment_Schedule__c = &quot;Annual Custom Payments&quot;,0,0))))</formula>
        <label>Payment Terms</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Percentage__c</fullName>
        <formula>((Year_1_Payment_Total__c*1)+(Year_2_Payment_Total__c*0.6)+(Year_3_Payment_Totals__c*0.4))/Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Portal_Opportunity_Link__c</fullName>
        <formula>&quot;https://na6.salesforce.com/secur/login_portal.jsp?orgId=00DQ000000GJnue&amp;portalId=06080000000IY1d&amp;startURL=/&quot; &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal Opportunity Link</label>
        <type>Text</type>
    </fields>
</CustomObject>